# space-shooter

./: CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  identification.txt  presentation.url
app/: main.cpp
include/: battleship.hpp  bullet.hpp  game.hpp  obstacle.hpp  star.hpp
lib/: battleship.cpp  bullet.cpp  game.cpp  obstacle.cpp  star.cpp  stars.cpp
